--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/lab": "5.0.0-alpha.133",
@@ -18,19 +19,23 @@
     "@mui/x-data-grid": "^5.17.26",
     "@mui/x-date-pickers": "^5.0.20",
     "@svgr/rollup": "^8.1.0",
-    "@tabler/icons-react": "^2.35.0",
+    "@tabler/icons-react": "^2.47.0",
     "axios": "^1.8.4",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
+    "docx-preview": "^0.3.5",
     "lodash": "^4.17.21",
+    "notistack": "^3.0.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-big-calendar": "^1.18.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-mui-sidebar": "^1.3.8",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
