--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@microsoft/signalr": "^8.0.7",
     "@mui/lab": "5.0.0-alpha.133",
     "@mui/material": "5.13.4",
     "@mui/system": "^5.14.11",
@@ -20,6 +21,7 @@
     "@mui/x-date-pickers": "^5.0.20",
     "@svgr/rollup": "^8.1.0",
     "@tabler/icons-react": "^2.47.0",
+    "apexcharts": "^4.7.0",
     "axios": "^1.8.4",
     "date-fns": "^2.30.0",
     "docx-preview": "^0.3.5",
