--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@microsoft/signalr": "^8.0.7",
+    "@mui/icons-material": "^5.17.1",
     "@mui/lab": "5.0.0-alpha.133",
     "@mui/material": "5.13.4",
     "@mui/system": "^5.14.11",
